Fix text overflow on chirps

--- a/src/styles/Chirp.css
+++ b/src/styles/Chirp.css
@@ -75,6 +75,8 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
+  overflow: auto;
+  word-wrap: break-word;
 }
 
 .chirpSubmit > .chirpImage {
