--- a/src/styles/ChirpModule.css
+++ b/src/styles/ChirpModule.css
@@ -63,7 +63,7 @@
 }
 
 .chirpWriting #chirpInput {
-  display: block;
+  display: inline-block;
   font-family: 'Chirp', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
     Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   width: 100%;
